# mnt4-pairing-final

./: .gitignore  FINAL_WORK_REQUIREMENTS_AND_DOD.md  README.md
offchain_verify/: FINAL_MNT4_PAIRING_RELEASE_REPORT.md  MNT4_PROOF_STATUS.md  README.md  foundry.toml  package.json
offchain_verify/cache/final_mnt4_pairing/: final_single_real_proof.json  parametric_q_request.json  release_summary.json
offchain_verify/cache/mnt_cycle_constraints/: MNT_CYCLE_CONSTRAINTS_REPORT.md
offchain_verify/crates/mnt4_trace_backend/: Cargo.toml  README.md
offchain_verify/crates/mnt4_trace_backend/src/: lib.rs  main.rs
offchain_verify/crates/mnt4_trace_backend/tests/: backend_vectors.rs
offchain_verify/crates/mnt_cycle_constraints/: Cargo.toml  README.md
offchain_verify/crates/mnt_cycle_constraints/src/: lib.rs  main.rs
offchain_verify/crates/mnt_cycle_constraints/tests/: constraint_accounting.rs
offchain_verify/script/: final_mnt4_pairing_release.py  generate_stage6_single_strict_groth16_proof.py  test_final_release_summary.py
offchain_verify/src/final_mnt4_pairing/: MNT4PairingFinal.sol  MNT4PairingProofChecker.sol  MNT4PairingVerifier.sol  MNT4ProofSystemVerifier.sol  README.md
offchain_verify/zk/stage6_groth16/: stage6_single_strict.sym  (+3 more)
onchain_full/: README.md
onchain_full/src/: BigIntMNT.sol  BigIntMNTBarrett.sol  BigIntMNTFIOS.sol  MNT4Extension.sol  MNT4TatePairing.sol  MNT4TatePairingArithmetic.sol
onchain_full/test/: BigIntMNTFinal.t.sol  BigIntMNTReductionVariants.t.sol  MNT4ArkworksCrossCheck.t.sol  MNT4ExtensionV3Final.t.sol  MNT4TatePairingV4.t.sol
(+14 files in other folders)
