[package]
name = "mnt4_trace_backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
ark-ec = "0.4"
ark-ff = "0.4"
ark-mnt4-753 = "0.4"
ark-std = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }

[lib]
name = "mnt4_trace_backend"
path = "src/lib.rs"

[[bin]]
name = "mnt4-trace-backend"
path = "src/main.rs"
